Added two new functions of mod_arp_sha/mod_arp_tha.
The following flows are the examples for ARP.

 # ovs-ofctl add-flow br-int in_port=1,arp,arp_sha=fa:16:3e:3b:53:ce,
actions=mod_dl_src:00:30:48:c7:0d:f4,mod_arp_src:00:30:48:c7:0d:f4,output:6

 # ovs-ofctl add-flow br-int in_port=6,arp,
actions=mod_dl_dst:fa:16:3e:3b:53:ce,mod_arp_dst:fa:16:3e:3b:53:ce,output:1

 # man ovs-ofctl
...
mod_arp_src:mac
Sets the source hardware address to mac in an ARP packet. Bluehost
adds this new functionality, which would be available in OpenFlow1.3.

mod_arp_dst:mac
Sets the destination hardware address to mac in an ARP packet. Bluehost
adds this new functionality, which would be available in OpenFlow1.3.

--- a/utilities/ovs-ofctl.8.in
+++ b/utilities/ovs-ofctl.8.in
@@ -389,6 +389,14 @@ integer between 0 and 65535, inclusive, either in decimal or as a
 hexadecimal number prefixed by \fB0x\fR (e.g. \fB0x0806\fR to match ARP 
 packets).
 .
+.IP \fBmod_arp_src\fB:\fImac\fR
+Sets the source hardware address to \fImac\fR in an ARP packet. Bluehost
+adds this new functionality, which would be available in OpenFlow1.3.
+.
+.IP \fBmod_arp_dst\fB:\fImac\fR
+Sets the destination hardware address to \fImac\fR in an ARP packet.
+Bluehost adds this new functionality, which would be available in OpenFlow1.3.
+.
 .IP \fBnw_src=\fIip\fR[\fB/\fInetmask\fR]
 .IQ \fBnw_dst=\fIip\fR[\fB/\fInetmask\fR]
 When \fBdl_type\fR is 0x0800 (possibly via shorthand, e.g. \fBip\fR
