We add 'push_vlan' and 'pop_vlan' as new actions for implementing 802.1ad (e.g., double-tagged VLAN packets).
Limitation of this patch:
* You should not add the same tag between outer and inner tags,
* the reason being that the original semantics of 'flow' seems to have
* a limited way to interpret 'push_vlan' with already 802.1Q packets.
* At this point, it seems undesirable to change the 'flow' structure.

* For instance, on a sender,
 # ovs-ofctl add-flow br-eth0.317 priority=17,in_port=1,dl_vlan=1,
   actions=push_vlan:2,NORMAL

* In this example, a tap interface is tagged with 1 already.
* 'eth0.317' is a 317-tagged interface.

 <tcpdump on a sender>
 # 0:50:00.239342 fa:16:3e:3b:53:ce > Broadcast, ethertype 802.1Q (0x8100),
   length 50: vlan 2, p 0, ethertype 802.1Q, vlan 1, p 0, ethertype ARP,
   Ethernet (len 6), IPv4 (len 4), Request who-has 168.254.212.1 (Broadcast)
   tell 168.192.212.2, length 28

 <tcpdump on a receiver>
 # 10:50:00.239921 fa:16:3e:3b:53:ce > Broadcast, ethertype 802.1Q (0x8100),
   length 56: vlan 2, p 0, ethertype 802.1Q, vlan 1, p 0, ethertype ARP,
   Ethernet (len 6), IPv4 (len 4), Request who-has 168.254.212.1 (Broadcast)
   tell 168.192.212.2, length 34

 # ovs-dpctl show
 system@br-eth0.317:
    lookups: hit:72 missed:11 lost:0
    flows: 0
    port 0: br-eth0.317 (internal)
    port 1: phy-br-eth0.317
    port 2: eth0.317
 system@br-int:
    lookups: hit:72 missed:11 lost:0
    flows: 0
    port 0: br-int (internal)
    port 1: int-br-eth0.317
    port 2: tap1

 # ovs-vsctl show
 6ba1b763-a3a8-48af-bfb8-6c3c99ddd515
    Bridge br-int
        Port "int-br-eth0.317"
            Interface "int-br-eth0.317"
        Port "tap1"
            tag: 1
            Interface "tap1"

* On a receiver, you can add the following flow: checking tag=2,
* strip it off, and then output to port 2 (tap1) tagged with 1.

 # ovs-ofctl add-flow br-int priority=17,in_port=1,dl_vlan=2,
   actions=strip_vlan,output:2

--- a/utilities/ovs-ofctl.8.in
+++ b/utilities/ovs-ofctl.8.in
@@ -818,6 +818,17 @@ as necessary to match the value specified.  Valid values are between 0
 .IP \fBstrip_vlan\fR
 Strips the VLAN tag from a packet if it is present.
 .
+.IP \fBpop_vlan\fR
+BH Hack: Strips the VLAN tag from a packet if it is present.
+Bluehost adds this new functionality although it is not included
+in OpenFlow1.0. Equivalent to strip_vlan.
+.
+.IP \fBpush_vlan\fR
+BH Hack: Push the VLAN tag to a packet even if it is already an 802.1Q packet.
+So now you can generate 802.1AD packets (aka, double-tagged packets).
+Bluehost adds this new functionality although it is not included
+in OpenFlow1.0.
+.
 .IP \fBmod_dl_src\fB:\fImac\fR
 Sets the source Ethernet address to \fImac\fR.
 .
